--- a/styles/styles.css
+++ b/styles/styles.css
@@ -43,19 +43,30 @@
     margin-left: auto;
     margin-right: auto;
     box-shadow: 1px 10px 19px 7px rgba(0, 0, 0, 0.2);
-    }
+   }
   .general {
     margin: 10px;
-  }
-  #temper {
+      }
+  #city {
     display: inline-flex;
+    white-space: pre-wrap;
+    margin: 15px;
      }
   .cityname {
     padding: 5px 10px;
   }
-  .temperature {
-    padding: 5px 10px;
+  .degree {
+    padding: 5px 30px;
     border-radius: 45px;
+    margin: 20px 30px 0;
+    display: inline-flex;
+  }
+  
+  #sense {
+    margin: 0 15px;
+    padding: 15px;
+    background-color: white;
+    border-radius: 10px;
   }
   .container {
     padding: 10px;
@@ -84,10 +95,17 @@
   }
   .days:hover {
     background-color: rgb(255, 232, 182);
+    transform: scale(1.2);
   }
   #celcium, #farenheit {
     font-size: 15px;
   }
+  .time {
+    display: inline-flex;
+    white-space: pre-wrap;
+    margin: 20px;
+  }
+  
   #link {
     font-family: monospace;
     font-size: 15px;
@@ -118,4 +136,8 @@ text-decoration: none;
 }
 .days {
   margin: 0 11px;
+}
+
+#description {
+  text-transform: capitalize;
 }
